--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@adiwajshing/keyed-db": "^0.2.4",
         "@hapi/boom": "^10.0.1",
         "@vitalets/google-translate-api": "^9.2.0",
-        "@whiskeysockets/baileys": "^6.7.5",
+        "@whiskeysockets/baileys": "^6.7.7",
         "anime-wallpaper": "^1.0.2",
         "api-dylux": "^1.4.4",
         "aptoide-scraper": "^1.0.1",
@@ -36,6 +36,7 @@
         "g-i-s": "^2.1.7",
         "google-it": "^1.6.2",
         "google-tts-api": "^2.0.2",
+        "gradient-string": "^2.0.2",
         "human-readable": "^0.2.1",
         "imgur": "2.3.0",
         "javascript-obfuscator": "^4.0.0",
