--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Cheems-Bot-MD",
-    "version": "14.0.0",
+    "version": "15.0.0",
     "description": "Whatsapp Bot By DGXeon",
     "main": "index.js",
     "type": "commonjs",
@@ -16,55 +16,107 @@
     "license": "MIT",
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@hapi/boom": "^10.0.1",
+        "@bochilteam/scraper": "^4.2.4",
+        "@develoka/angka-terbilang-js": "^1.4.2",
+        "@distube/ytdl-core": "^4.13.5",
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@hapi/boom": "^10.0.0",
+        "@ibaraki-douji/pixivts": "^2.4.1",
         "@vitalets/google-translate-api": "^9.2.0",
-        "@whiskeysockets/baileys": "^6.7.7",
+        "@whiskeysockets/baileys": "^6.7.8",
         "anime-wallpaper": "^1.0.2",
         "api-dylux": "^1.4.4",
         "aptoide-scraper": "^1.0.1",
-        "awesome-phonenumber": "^5.9.0",
-        "axios": "^1.4.0",
+        "awesome-phonenumber": "^4.4.0",
+        "axios": "^0.24.0",
+        "brainly-scraper": "^1.0.3",
+        "cfonts": "^3.1.1",
         "chalk": "^4.1.2",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "^1.0.0-rc.10",
+        "child_process": "^1.0.2",
+        "chowdown": "^1.2.6",
+        "colors": "^1.4.0",
         "cookie": "^0.5.0",
         "crypto": "^1.0.1",
+        "didyoumean": "^1.2.2",
+        "emoji-api": "^1.0.2",
+        "express": "^4.18.2",
         "ffmpeg": "^0.0.4",
         "file-type": "^16.5.3",
+        "filesize": "^10.0.7",
+        "fluent-ffmpeg": "^2.1.2",
         "fluent-ffmpeg-7": "^2.1.5",
         "form-data": "^4.0.0",
-        "fs-extra": "^11.1.1",
-        "g-i-s": "^2.1.7",
-        "google-it": "^1.6.2",
+        "fs": "^0.0.1-security",
+        "fs-extra": "^11.1.0",
+        "g-i-s": "^2.1.6",
+        "gm": "^1.25.0",
+        "google-it": "^1.6.4",
         "google-tts-api": "^2.0.2",
+        "googlethis": "^1.7.1",
+        "got": "^13.0.0",
         "gradient-string": "^2.0.2",
+        "http": "^0.0.1-security",
+        "https": "^1.0.0",
         "human-readable": "^0.2.1",
+        "image-to-base64": "^2.2.0",
+        "image-url-validator": "^1.0.4",
         "imgur": "2.3.0",
         "javascript-obfuscator": "^4.0.0",
-        "jimp": "^0.16.13",
-        "jsdom": "^22.1.0",
+        "jimp": "^0.16.2",
+        "jsdom": "^21.1.0",
+        "link-preview-js": "^3.0.4",
         "lodash": "^4.17.21",
+        "lowdb": "^2.1.0",
         "mal-scraper": "^2.11.4",
-        "mathjs": "^11.3.0",
+        "marker": "^0.1.2",
+        "mathjs": "^11.5.0",
+        "md5": "^2.3.0",
         "megajs": "^1.1.4",
         "moment-timezone": "^0.5.43",
+        "mongoose": "^7.3.4",
+        "ms": "^2.1.3",
+        "mumaker": "^1.0.0",
         "node-cron": "^3.0.0",
-        "node-fetch": "^2.6.11",
+        "node-fetch": "^2.6.1",
+        "node-gtts": "^2.0.2",
         "node-id3": "^0.2.3",
         "node-os-utils": "^1.3.7",
         "node-webpmux": "^3.1.7",
         "node-youtube-music": "^0.8.3",
+        "nodemailer": "^6.9.1",
+        "nodemailer-smtp-transport": "^2.7.4",
         "object-query-string": "^1.2.0",
+        "os": "^0.1.2",
+        "parse-ms": "^3.0.0",
         "pastebin-js": "^1.0.6",
+        "path": "^0.12.7",
+        "pdfkit": "^0.13.0",
+        "perf_hooks": "^0.0.1",
         "performance-now": "^2.1.0",
-        "pino": "^8.14.1",
+        "pino": "^8.8.0",
+        "process": "^0.11.10",
         "qrcode": "^1.5.3",
         "qrcode-reader": "^1.0.4",
         "qrcode-terminal": "^0.12.0",
+        "qs": "^6.11.0",
         "readline": "^1.3.0",
+        "remove.bg": "^1.3.0",
         "request": "^2.88.2",
+        "requests": "^0.3.0",
+        "rumus-bdr": "^1.0.0",
+        "scrape-primbon": "^1.1.0",
         "set-cookie": "^0.0.4",
+        "similarity": "^1.2.1",
         "steno": "^1.0.0",
+        "superagent": "^8.0.9",
         "translate-google-api": "^1.0.4",
+        "uglify-js": "^3.17.4",
+        "unofficial-carbon-now": "^1.0.6",
+        "util": "^0.12.5",
+        "whois": "^2.14.0",
+        "ws": "^8.13.0",
+        "yargs": "^17.6.2",
         "youtube-yts": "^2.0.0",
         "youtubedl-core": "^4.11.5",
         "yt-search": "^2.10.4",
