Added build command

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "media": "XeonMedia"
     },
     "scripts": {
+        "build": "npm run build",
         "start": "node index.js"
     },
     "author": "DGXeon",
